--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,20 +3,20 @@
   "name": "YenTable",
   "icons": [
     {
-      "src": "logo192.png",
+      "src": "./logo512.png",
       "type": "image/png",
-      "sizes": "192x192",
+      "sizes": "512x512",
       "purpose": "maskable"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
     }
   ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "rgb(30, 35, 50)",
-  "background_color": "rgb(55, 65, 85)"
+  "background_color": "rgb(55, 65, 85)",
+  "splash": {
+    "image": "/images/logo192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  }
 }
 
