--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,21 @@
   "name": "YenTable",
   "icons": [
     {
+      "src": "./logo192.png",
+      "type": "image/png",
+      "sizes": "192x192",
+      "purpose": "maskable"
+    },
+    {
       "src": "./logo512.png",
       "type": "image/png",
       "sizes": "512x512",
+      "purpose": "maskable"
+    },
+    {
+      "src": "./logo1024.png",
+      "type": "image/png",
+      "sizes": "1024x1024",
       "purpose": "maskable"
     }
   ],
