--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,19 +6,13 @@
       "src": "./logo192.png",
       "type": "image/png",
       "sizes": "192x192",
-      "purpose": "maskable"
+      "purpose": "any maskable"
     },
     {
       "src": "./logo512.png",
       "type": "image/png",
       "sizes": "512x512",
-      "purpose": "maskable"
-    },
-    {
-      "src": "./logo1024.png",
-      "type": "image/png",
-      "sizes": "1024x1024",
-      "purpose": "maskable"
+      "purpose": "any maskable"
     }
   ],
   "start_url": ".",
