--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "YenTable",
-  "name": "YenTable",
+  "short_name": "Yen Table",
+  "name": "Yen Table",
   "icons": [
     {
       "src": "./logo192.png",
@@ -12,6 +12,12 @@
       "src": "./logo512.png",
       "type": "image/png",
       "sizes": "512x512",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "./logo1024.png",
+      "type": "image/png",
+      "sizes": "1024x1024",
       "purpose": "any maskable"
     }
   ],
