--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,27 +3,15 @@
   "name": "Yen Table",
   "icons": [
     {
-      "src": "./logo.webp",
-      "type": "image/webp",
-      "sizes": "any",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "./logo192.png",
+      "src": "logo192.png",
       "type": "image/png",
       "sizes": "192x192",
       "purpose": "any maskable"
     },
     {
-      "src": "./logo512.png",
+      "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "./logo1024.png",
-      "type": "image/png",
-      "sizes": "1024x1024",
       "purpose": "any maskable"
     }
   ],
