--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,16 +3,15 @@
   "name": "Yen Table",
   "icons": [
     {
-      "src": "/logo192.png",
+      "src": "./logo192.png",
       "type": "image/png",
-      "sizes": "192x192",
-      "purpose": "any maskable"
+      "sizes": "192x192"
     },
     {
-      "src": "/logo512.png",
+      "src": "./logo512.png",
       "type": "image/png",
       "sizes": "512x512",
-      "purpose": "any maskable"
+      "purpose": "maskable"
     }
   ],
   "start_url": ".",
