added service worker

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,7 +11,7 @@
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512",
-      "purpose": "maskable"
+      "purpose": "any maskable"
     }
   ],
   "start_url": ".",
