--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,6 +4,7 @@
   "icons": [
     {
       "src": "./images/favicon.ico",
+      "type": "image/x-icon",
       "sizes": "16x16 32x32 48x48"
     },
     {
