--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,13 +5,18 @@
     {
       "src": "./images/512.png",
       "type": "image/png",
-      "sizes": "512x512",
-      "purpose": "maskable"
+      "sizes": "512x512"
     },
     {
       "src": "./images/192.png",
       "type": "image/png",
       "sizes": "192x192"
+    },
+    {
+      "src": "./images/logo.png",
+      "type": "image/svg",
+      "sizes": "any",
+      "purpose": "maskable"
     }
   ],
   "start_url": ".",
