--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,7 +13,7 @@
       "sizes": "192x192"
     },
     {
-      "src": "./images/logo.png",
+      "src": "./images/logo.svg",
       "type": "image/svg+xml",
       "sizes": "any",
       "purpose": "maskable"
