--- a/public/manifest.json
+++ b/public/manifest.json
@@ -22,6 +22,7 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "white"
+  "theme_color": "white",
+  "background_color": "white"
 }
 
